* 0.22.1

  - fix a memory leak in subscriber that was triggered by lots of
    resubscriptions.

* 0.22.0 netidx

  - start using cargo workspaces to manage versions hence the big bump
    to harmonize everything

  - fix a performance regression in tls due to a broken read_buf
    operation in tokio. This was slowing reads down 50x over the
    baseline.

  - optimize packed buffer decoding with a custom buffer
    implementation vs BytesMut

  - optimize varint decoding

  - aside from the regression, which was crushing performance,
    throughput is now 20% better

  - fix a bug in resolver_client::write_client that caused it to
    always write the first publish operation twice.

  - handle additional rare republish cases in
    resolver_client::write_client

* 0.20.3 netidx-tools

  - port the container server to windows

* 0.18.1 netidx-archive

  - fix a date overflow when seeking backwards with an empty current file

* 0.18.2 netidx-derive

  - Check in the proc macro that no tag is used more than once

* 0.18.1 netidx-derive

  - add an attribute #[pack(tag(n))] that allows explicitly specifying
    the on the wire tag of an enum variant. If tag is specified on one
    variant case then it must be specified on all of them.

* 0.19.18 netidx

  - reduce the wait time between resubscription attempts

* 0.20.1 browser, protocols

  - fix borrow error in the browser

  - reduce log verbosity in rpc

* 0.19.17 netidx

  - fix a bug where a dead resolver server could cause publishing to
    take a long time (even if at least 1 resolver in the cluster is
    still alive)

* 0.20.1 protocols and deps

  - remove the lock around rpc procedure calls, it is no longer
    necessary with the new calling convention

* 0.20.0 protocols and deps

  - change the rpc calling convention to fix a race condition where
    the publisher is still publishing arguments when the subscriber is
    created. Now only one published value is required to call an