@@ -1,6 +1,6 @@
 [package]
 name = "netidx-core"
-version = "0.22.1"
+version = "0.22.2"
 authors = ["Eric Stokes <letaris@gmail.com>"]
 edition = "2021"
 license = "MIT"
@@ -32,3 +32,4 @@ enumflags2 = "0.7"
 triomphe = "0.1"
 once_cell = "1.17.1"
 parking_lot = "0.12.1"
+indexmap = "2"
