@@ -3,6 +3,8 @@
   - fix a memory leak in subscriber that was triggered by lots of
     resubscriptions.
 
+  - implement pack and poolable for indexmap and indexset
+
 * 0.22.0 netidx
 
   - start using cargo workspaces to manage versions hence the big bump
